# geospatial

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md
uki-flooddetection/: README.md  granite-geospatial-flood-detection-uki-model-card.md  granite-geospatial-uki-model-card.md  pyproject.toml
uki-flooddetection/granite_geo_flood/: __init__.py
uki-flooddetection/granite_geo_flood/test/: test_utils.py
uki-flooddetection/granite_geo_flood/utils/: helper.py
uki-flooddetection/notebooks/: 1_getting_started.ipynb  2_fine_tuning.ipynb  2_fine_tuning_with_figure.ipynb
uki-flooddetection/notebooks/custom_modules/: __init__.py  granite_geospatial_uki.py
uki-flooddetection/resources/s2_only_inference/: EMSR407_AOI_3_2019-11-14_tile_0_2_test_image_pred.tif  EMSR407_AOI_3_2019-11-14_tile_1_1_test_image_pred.tif  EMSR429_AOI_55_2020-02-26_tile_0_2_test_image_pred.tif  EMSR429_AOI_5_2020-03-02_tile_2_1_test_image_pred.tif  EMSR429_AOI_5_2020-03-02_tile_3_2_test_image_pred.tif  EMSR429_AOI_61_2020-02-26_tile_2_3_test_image_pred.tif  EMSR698_AOI_36_2023-10-10_tile_4_1_test_image_pred.tif  EMSR698_AOI_36_2023-10-10_tile_4_1_test_image_pred.tif.aux.xml  EMSR698_AOI_7_2023-10-08_tile_0_0_test_image_pred.tif  EMSR698_AOI_7_2023-10-08_tile_1_0_test_image_pred.tif
