[build-system]
requires = [ "setuptools" ]
build-backend = 'setuptools.build_meta'

[project]
name = "granite_geo_flood"
version = "1.0.0"
description = "Granite Flood Segmentation Model with S1 and S2 bands"
license = { "text" = "Apache License, Version 2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fine-tuning", "geospatial foundation models", "flood segmentation"]

dependencies = [
  "torch==2.1.0",
  "torchvision==0.16.0",
  "terratorch @ git+https://github.com/IBM/terratorch.git@6d97521 ",
  "lightning-utilities==0.11.3.post",
  "albumentations==1.4.3",
  "huggingface_hub",
  "jupyter",
  "matplotlib",
  "imagecodecs",
  "global_land_mask",
  "numpy<2",
]

[project.optional-dependencies]
colab = [
  "gdown",
]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
  "detect-secrets @ git+https://github.com/ibm/detect-secrets.git@master#egg=detect-secrets"
]
notebooks = [
  "jupyter",
]

[tool.setuptools.packages]
find = {}